# nf-binder-vis

./: ,gitignore  .dockerignore  BUILDING.md  Dockerfile  Dockerfile.just  README.md  app.py  bindcraft.py  config.toml  docker-compose.yml  justfile  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
nf_binder_vis/: __init__.py  app.py
scripts/binder_prep/: README.md  collect_designs.py  prepare_sequences.py  seq_prep.py  tag_placement.py
