[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nf-binder-vis"
version = "0.1.0"
description = "Results visualization for the nf-binder-design project"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andrew Perry" }]
dependencies = [
    "streamlit>=1.32.0",
    "pandas",
    "seaborn",
    "matplotlib",
    "altair>=5.2.0",
    "biopython",
]

[project.optional-dependencies]
dev = ["black", "isort", "flake8"]

[project.scripts]
nf-binder-vis = "nf_binder_vis.app:run"

[tool.hatch.build.targets.wheel]
packages = ["nf_binder_vis"]

[tool.hatch.metadata]
allow-direct-references = true
